add filter params to swagger
