# app/models/article.rb
@@ -1,4 +1,4 @@
 class Article < ApplicationRecord
   scope :filter_ids, ->(ids) { where(id: ids) }
-  scope :title_contains, ->(substring) { where('title ILIKE ?', "%#{substring}%") }
+  scope :filter_title_contains, ->(substring) { where('title ILIKE ?', "%#{substring}%") }
 end
